--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,1 @@
-name    = MojoX-Log-Syslog
-author  = Fayland Lam <fayland@gmail.com>
-license = Perl_5
-copyright_holder = Fayland Lam
-copyright_year   = 2016
-
-version = 0.001
-
-[@Basic]
+[@Milla]
